<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_weight="1">

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/planner_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="Planner"
            android:textSize="12sp" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="Search"
            android:textSize="12sp" />

        <Button
            android:id="@+id/mock_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="Mock"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/validity"
        android:layout_width="match_parent"
        android:layout_height="304dp"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mock_next_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="MOCK NEXT"
                android:textSize="10sp" />

            <Button
                android:id="@+id/mock_back_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Mock Back"
                android:textSize="10sp" />

            <Button
                android:id="@+id/turn_off_mocking_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="MOCK OFF"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/refresh_directions_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="onRefreshClicked"
                android:text="Refresh Directions" />

            <Switch
                android:id="@+id/brief_directions_switch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:minHeight="48dp"
                android:onClick="onBriefDirectionsSwitch"
                android:text="Brief Directions" />

            <ImageButton
                android:id="@+id/reroute_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                app:srcCompat="@drawable/maps_icon_direction" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/next_directions_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="onNextClicked"
                android:text="Next" />

            <Button
                android:id="@+id/skip_directions_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="onSkipClicked"
                android:text="Skip" />

            <Button
                android:id="@+id/back_directions_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="onBackClicked"
                android:text="Back" />


        </LinearLayout>

        <TextView
            android:id="@+id/directions_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Press 'Next' to begin route guidance."
            android:scrollbars="vertical"
            android:textColorHint="#757575"
            android:verticalScrollbarPosition="right" />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
