<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlannerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/to_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onMapClicked"
                android:text="Map" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/number_items_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/clearAllBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClearAllClicked"
                android:text="Clear All" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="SearchExhibits"
                android:onClick="onSearchClicked"
                app:srcCompat="@android:drawable/ic_menu_search" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:keepScreenOn="false"
            android:orientation="horizontal"
            android:showDividers="middle|beginning"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:orientation="vertical"
                android:weightSum="1">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/node_viewer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="181dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:orientation="vertical"
                android:weightSum="1">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/route_summary_viewer"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>