...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="1">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/search_node_viewer"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

...
